--- a/angular.json
+++ b/angular.json
@@ -87,12 +87,22 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
+              
+            
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "e7ae4502-e6a1-4f17-b69b-4f6834740419"
   }
 }
